[package]
name = "mrt-rs"
version = "1.1.0"
authors = ["Christian Veenman <chris_veenman@hotmail.com>"]
edition = '2018'
readme = "README.md"
keywords = ["mrt", "parser", "bgp"]
categories = ["parsing", "network-programming"]
repository = "https://github.com/DevQps/mrt-rs"
homepage = "https://github.com/DevQps/mrt-rs"
documentation = "https://docs.rs/mrt-rs"
description = "A library for parsing Multi-Threaded Routing Toolkit (MRT) formatted streams."
license = "GPL-3.0"
exclude = [
    "README.md",
    "res/*",
    "tests/*",
    ".travis.yml"
]

[badges]
travis-ci = { repository = "DevQps/mrt-rs", branch = "master" }
codecov = { repository = "DevQps/mrt-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies.byteorder]
version = "1.2.7"
features = ["i128"]

[dev-dependencies]
libflate = "0.1"

